# Qt_CMake_VS

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mylog.conf  Mylog.cpp  Mylog.h  README.md  build.bat  demoMain.cpp  multiplyDialog.cpp  multiplyDialog.h  multiplyDialog.ui  myChannel.cpp  myChannel.h  webmapDialog.cpp  webmapDialog.h  webmapDialog.ui
lib/log4cplus/include/log4cplus/config/: defines.hxx
lib/log4cplus/lib/: log4cplusU.lib
lib/log4cplus/lib/cmake/log4cplus/: log4cplusConfigVersion.cmake  log4cplusTargets-release.cmake  log4cplusTargets.cmake
lib/log4cpp/: log4cppConfig.cmake
lib/log4cpp/lib/: log4cpp.lib
smap/: mymap_ba.html
